<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity">

    <View
        android:id="@+id/new_bg_1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/color_icon_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:id="@+id/new_bg_2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/background_red_wave"
        app:layout_constraintTop_toBottomOf="@id/new_bg_1"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ill_music"/>

    <LinearLayout
        android:id="@+id/new_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="-40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/new_bg_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout style="@style/PageNewLineLayout"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/color_text_primary"
                android:text="@string/add_help"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout style="@style/PageNewLineLayout">

            <ImageView
                style="@style/PageNewLineIcon"
                android:src="@drawable/baseline_new_title" />

            <EditText
                android:id="@+id/title_edittext"
                style="@style/PageNewLineEdit"
                android:hint="@string/hint_title" />

        </LinearLayout>

        <View style="@style/PageNewLineView" />

        <LinearLayout style="@style/PageNewLineLayout">

            <ImageView
                style="@style/PageNewLineIcon"
                android:src="@drawable/baseline_new_tag" />

            <EditText
                android:id="@+id/tag_edittext"
                style="@style/PageNewLineEdit"
                android:hint="@string/hint_tag" />

        </LinearLayout>

        <View style="@style/PageNewLineView" />

        <LinearLayout style="@style/PageNewLineLayout">

            <ImageView
                style="@style/PageNewLineIcon"
                android:src="@drawable/baseline_new_description" />

            <EditText
                android:id="@+id/description_edittext"
                style="@style/PageNewLineEdit"
                android:hint="@string/hint_description" />

        </LinearLayout>

        <View style="@style/PageNewLineView" />

        <LinearLayout style="@style/PageNewLineLayout">

            <ImageView
                style="@style/PageNewLineIcon"
                android:src="@drawable/baseline_new_reward" />

            <EditText
                android:id="@+id/reward_edittext"
                style="@style/PageNewLineEdit"
                android:hint="@string/hint_reward" />

        </LinearLayout>

        <View style="@style/PageNewLineView" />

        <Button
            android:id="@+id/buttonAddHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_button_background"
            android:text="@string/new_button_text"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>