<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/header_layout"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/header"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/header_layout"
            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/tag_line"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/viewSupporter"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/login_background"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="60dp"
                android:paddingEnd="10dp"
                android:textColor="@color/color_text_primary"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/textWelcome"
                tools:ignore="Autofill" />

            <View
                android:id="@+id/viewDividerForEmail"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_text_hint"
                app:layout_constraintTop_toBottomOf="@id/loginInputEmail" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_email"
                app:layout_constraintBottom_toBottomOf="@id/loginInputEmail"
                app:layout_constraintStart_toStartOf="@id/loginInputEmail"
                app:tint="@color/color_text_hint" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="60dp"
                android:paddingEnd="10dp"
                android:textColor="@color/color_text_primary"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/viewDividerForEmail"
                tools:ignore="Autofill" />

            <View
                android:id="@+id/viewDividerForPassword"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/color_text_hint"
                app:layout_constraintTop_toBottomOf="@id/inputPassword" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_lock"
                app:layout_constraintBottom_toBottomOf="@id/inputPassword"
                app:layout_constraintStart_toStartOf="@id/inputPassword"
                app:tint="@color/color_text_hint" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/primary_button_background"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/viewDividerForPassword"
                tools:layout_editor_absoluteX="40dp" />

<!--            <TextView-->
<!--                android:id="@+id/textForgetPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/forget_password"-->
<!--                android:textSize="13sp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/buttonLogin" />-->

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button_background"
                android:text="@string/create_account"
                android:textColor="@color/color_primary_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                tools:layout_editor_absoluteX="40dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

